updating sender(not complete)

--- a/src/Makefile
+++ b/src/Makefile
@@ -30,7 +30,7 @@ PROJECTRELATIVE_PATH = src
 O = $(PROJECT_OUTPUT_DIR)/$(CONFIGNAME)/$(PROJECTRELATIVE_PATH)
 
 # Object files for local .cc, .msg and .sm files
-OBJS = $O/coordinator.o $O/node.o $O/Message_m.o
+OBJS = $O/coordinator.o $O/LogsGenerator.o $O/node.o $O/Message_m.o
 
 # Message files
 MSGFILES = \
